manager can only create user with role employee or finance_manager
